# nzxtcli

./: .gitignore  Cargo.toml  README.md  build.rs
contrib/: 60-nzxtcli.rules  cpu-temp.service
src/: controller.rs  lib.rs  main.rs  types.rs
